--- a/src/App.css
+++ b/src/App.css
@@ -201,3 +201,52 @@
   text-transform: uppercase;
   font-weight: bold;
 }
+
+.stab-travel-small-photo-half {
+  display: flex;
+}
+
+.stab-travel__small-photo-row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.stab-travel__photo--row {
+  display: flex;
+  margin-bottom: 22px;
+}
+
+.stab-travel__photo-lg {
+  margin-right: 15px;
+  border: 2px dashed #f5f5f5;
+  width: 280px;
+  height: 200px;
+}
+
+.stab-travel__photo-sm {
+  border: 2px dashed #f5f5f5;
+  width: 110px;
+  height: 90px;
+  margin-right: 15px;
+}
+
+.stab-travel__photo-wrap {
+  position: relative;
+}
+
+.stab-travel__photo-count {
+  top: -5px;
+  left: -10px;
+  height: 25px;
+  width: 25px;
+  background-color: #CCCCCC;
+  color: #000000;
+  position: absolute;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: bold;
+}
