--- a/src/App.css
+++ b/src/App.css
@@ -222,6 +222,14 @@
   border: 2px dashed #f5f5f5;
   width: 280px;
   height: 200px;
+  transition: .2s ease;
+
+}
+
+.stab-travel___photo-bg {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .stab-travel__photo-sm {
@@ -229,10 +237,17 @@
   width: 110px;
   height: 90px;
   margin-right: 15px;
+  transition: .2s ease;
 }
 
 .stab-travel__photo-wrap {
   position: relative;
+  transition: .2s ease;
+}
+
+.stab-travel__photo-sm:hover, .stab-travel__photo-lg:hover {
+  cursor: pointer;
+  background-color: #f2f2f2;
 }
 
 .stab-travel__photo-count {
@@ -249,4 +264,25 @@
   justify-content: center;
   font-size: 12px;
   font-weight: bold;
+}
+
+hr {
+  height: 2px;
+  border: none;
+  background-color: #f5f5f5;
+}
+
+.edit-link {
+  opacity: 0.4;
+  transition: .2s ease;
+  text-decoration: underline;
+}
+
+.edit-link:hover {
+  cursor: pointer;
+  opacity: 0.2;
+}
+
+.d-none {
+  display: none;
 }
