--- a/src/App.css
+++ b/src/App.css
@@ -266,6 +266,26 @@
   font-weight: bold;
 }
 
+.stab-travel__photo-count-remove {
+  top: -5px;
+  left: -10px;
+  height: 25px;
+  width: 25px;
+  background-color: red;
+  color: #FFFFFF;
+  position: absolute;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+.stab-travel__photo-count-remove:hover {
+  cursor: pointer;
+}
+
 hr {
   height: 2px;
   border: none;
